--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,13 @@ services:
 
   cnil-pia-front:
     container_name: LINCnil-pia-front
-    build: docker/cnil-pia-front
+    build: 
+      context: docker/cnil-pia-front
+      dockerfile: Dockerfile
+      args:
+        PIA_BACKEND_URL: '<pia_backend_url_value>'
+        ATHORA_RETRIEVE_PROFILE: '<athora_retrieve_profile_value>'
+        ATHORA_GET_AVAILABLE_USERS: '<athora_get_available_users_value>'
     restart: always
     ports:
       - 0.0.0.0:8080:80
