ensure the build arguments will be replaced

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
       context: docker/cnil-pia-front
       dockerfile: Dockerfile
       args:
-        PIA_BACKEND_URL: '<pia_backend_url_value>'
-        ATHORA_RETRIEVE_PROFILE: '<athora_retrieve_profile_value>'
-        ATHORA_GET_AVAILABLE_USERS: '<athora_get_available_users_value>'
+        PIA_BACKEND_URL: 'http://localhost:3000'
+        ATHORA_RETRIEVE_PROFILE: 'http://localhost:4200/assets/mocks/retrieveProfile.json'
+        ATHORA_GET_AVAILABLE_USERS: 'http://localhost:4200/assets/mocks/getAvailableUsers.json'
     restart: always
     ports:
       - 0.0.0.0:8080:80
